objects/BillingCase__c.object
<CustomObject>
    <fields>
        <fullName>A0_30_Value_del__c</fullName>
        <label>0 -30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AM_CSN__c</fullName>
        <description>AM – CSN</description>
        <formula>TEXT( CustomersAccount__r.AM_CSN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM – CSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Event__c</fullName>
        <description>AM - Event</description>
        <formula>TEXT( CustomersAccount__r.AM_Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM - Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Inquisium__c</fullName>
        <description>AM – Inquisium</description>
        <formula>TEXT( CustomersAccount__r.AM_Survey__c )</formula>
        <label>AM – Inquisium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Value__c</fullName>
        <label>AR Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Created_By__c</fullName>
        <formula>CustomersAccount__r.CreatedBy.FirstName+CustomersAccount__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Modified_By__c</fullName>
        <formula>CustomersAccount__r.LastModifiedBy.FirstName+CustomersAccount__r.LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>TEXT(CustomersAccount__r.AM_Event__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT( CustomersAccount__r.Account_Status__c )</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Suspension_Email_Sent__c</fullName>
        <label>Account Suspension Email Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Efforts_Exhausted__c</fullName>
        <label>All Efforts Exhausted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Billing_Contact__c</fullName>
        <label>Alt Billing Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_91__c</fullName>
        <label>Amount 91+</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Billed__c</fullName>
        <label>Amount Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due_31_60__c</fullName>
        <label>Amount Due 31-60</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due_61_90__c</fullName>
        <label>Amount Due 61-90</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Forgiven__c</fullName>
        <formula>Invoice_Amount__c  -  Settlement_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Forgiven</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Outstanding__c</fullName>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_By__c</fullName>
        <label>Authorized By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Alice Dixon</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Anil Punyapu</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Anuj Malhotra</fullName>
                </value>
                <value>
                    <fullName>Ashish Arora</fullName>
                </value>
                <value>
                    <fullName>Ashley Baber</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Bart Hart</fullName>
                </value>
                <value>
                    <fullName>Betsie Vason</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Brittany Spano</fullName>
                </value>
                <value>
                    <fullName>Caitlin McMorrow</fullName>
                </value>
                <value>
                    <fullName>Caitlin Rawles</fullName>
                </value>
                <value>
                    <fullName>Camille Wingo</fullName>
                </value>
                <value>
                    <fullName>Carla Perez</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Cassie Whiteside</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Christopher Coultas</fullName>
                </value>
                <value>
                    <fullName>Christopher Rost</fullName>
                </value>
                <value>
                    <fullName>Cristina Estrella</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autorized_By__c</fullName>
        <label>Autorized By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Usha Senapati</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Rohit Khanna</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Nicholas Kaliya</fullName>
                </value>
                <value>
                    <fullName>Dinesh Jakhar</fullName>
                </value>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Jack Ukil</fullName>
                </value>
                <value>
                    <fullName>Peter Kaandorp</fullName>
                </value>
                <value>
                    <fullName>Mike Julka</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Graham Beale</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Kevin Caiazza</fullName>
                </value>
                <value>
                    <fullName>Kim Murdock</fullName>
                </value>
                <value>
                    <fullName>Jonathan Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Lizz Harrell</fullName>
                </value>
                <value>
                    <fullName>Gurpreet Singh</fullName>
                </value>
                <value>
                    <fullName>Daniel Stone</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Jenna Glotz</fullName>
                </value>
                <value>
                    <fullName>Emma Batson</fullName>
                </value>
                <value>
                    <fullName>Katie LaDue</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Janine Alsalam</fullName>
                </value>
                <value>
                    <fullName>Mollie Propes</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Meg Stensrud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Days_to_Pay__c</fullName>
        <label>Average Days to Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due_2__c</fullName>
        <label>Balance Due 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due_3__c</fullName>
        <label>Balance Due 3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due_4__c</fullName>
        <label>Balance Due 4</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Manager__c</fullName>
        <label>Billing Account Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <label>Billing Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Rep__c</fullName>
        <label>Billing Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Usha Senapati</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Rohit Khanna</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Nicholas Kaliya</fullName>
                </value>
                <value>
                    <fullName>Dinesh Jakhar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blacklist_Comments__c</fullName>
        <label>Blacklist Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blacklist_Date__c</fullName>
        <label>Blacklist Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blacklist__c</fullName>
        <label>Blacklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blacklisted__c</fullName>
        <label>Blacklisted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bucket_value_1_del__c</fullName>
        <formula>CASE( Project_Bucket_del__c ,"0-30", A0_30_Value_del__c,
"30-60", X30_60_Value_del__c ,
"60-90",  X60_90_Value_del__c,
"91+", X91_Value_del__c
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bucket value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CC_Expiry_Date__c</fullName>
        <label>Expiration Date - CC on File</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Slam__c</fullName>
        <label>CC Slam</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Type_Future_CC__c</fullName>
        <label>CC Type - Future CC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Type__c</fullName>
        <label>CC Type - CC on File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Master Card</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_ending_with__c</fullName>
        <label>CC Ending with</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_on_File__c</fullName>
        <label>CC on File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_slam_Date__c</fullName>
        <label>CC slam Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CVII_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CVII ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Don't Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Sue_For__c</fullName>
        <label>Can Sue For</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CancelAmount__c</fullName>
        <label>Cancel Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel__c</fullName>
        <label>Cancel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_0_30__c</fullName>
        <label>Cancellation 0-30</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_31_60__c</fullName>
        <label>Cancellation 31-60</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_61_90__c</fullName>
        <label>Cancellation 61-90</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_91__c</fullName>
        <label>Cancellation 91+</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Back_Received__c</fullName>
        <label>Charge Back Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charged__c</fullName>
        <label>Charged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AutoRenewal</fullName>
                </value>
                <value>
                    <fullName>External Collections</fullName>
                </value>
                <value>
                    <fullName>Internal Collections</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Suspended-External Collections</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <label>Closed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Carlo</fullName>
                </value>
                <value>
                    <fullName>Adrian Arora</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Alice Dixon</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Anil Punyapu</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Anuj Malhotra</fullName>
                </value>
                <value>
                    <fullName>Ashish Arora</fullName>
                </value>
                <value>
                    <fullName>Ashley Baber</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Ashley Mohney</fullName>
                </value>
                <value>
                    <fullName>Bart Hart</fullName>
                </value>
                <value>
                    <fullName>Betsie Vason</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Brian Pirkle</fullName>
                </value>
                <value>
                    <fullName>Brittany Spano</fullName>
                </value>
                <value>
                    <fullName>Caitlin McMorrow</fullName>
                </value>
                <value>
                    <fullName>Caitlin Rawles</fullName>
                </value>
                <value>
                    <fullName>Camille Wingo</fullName>
                </value>
                <value>
                    <fullName>Carla Perez</fullName>
                </value>
                <value>
                    <fullName>Caroline Gordon</fullName>
                </value>
                <value>
                    <fullName>Cassie Whiteside</fullName>
                </value>
                <value>
                    <fullName>Cesar Devoto</fullName>
                </value>
                <value>
                    <fullName>Chris Pennington</fullName>
                </value>
                <value>
                    <fullName>Christopher Coultas</fullName>
                </value>
                <value>
                    <fullName>Christopher Rost</fullName>
                </value>
                <value>
                    <fullName>Cristina Estrella</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_s_Contact__c</fullName>
        <label>Collection's Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay</fullName>
                </value>
                <value>
                    <fullName>Ashish</fullName>
                </value>
                <value>
                    <fullName>Danielle</fullName>
                </value>
                <value>
                    <fullName>Nick</fullName>
                </value>
                <value>
                    <fullName>Omar</fullName>
                </value>
                <value>
                    <fullName>Rajat</fullName>
                </value>
                <value>
                    <fullName>Rohit</fullName>
                </value>
                <value>
                    <fullName>Shiraz</fullName>
                </value>
                <value>
                    <fullName>Thomas</fullName>
                </value>
                <value>
                    <fullName>Usha</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Notes__c</fullName>
        <label>Comments/Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>Email Confirmation</fullName>
                </value>
                <value>
                    <fullName>No Confirmation Yet</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Dates__c</fullName>
        <label>Contract Dates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Emails_Sent__c</fullName>
        <label>Count of Emails Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Registrants__c</fullName>
        <label>Count of Registrants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <formula>CustomersAccount__r.Country_Region__c</formula>
        <label>Country Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Being_Handled_By__c</fullName>
        <label>Currently Being Handled By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ajay Singh</fullName>
                </value>
                <value>
                    <fullName>Anuj Gupta</fullName>
                </value>
                <value>
                    <fullName>Anuj Malhotra</fullName>
                </value>
                <value>
                    <fullName>Ashley Chiu</fullName>
                </value>
                <value>
                    <fullName>Dinesh Jakhar</fullName>
                </value>
                <value>
                    <fullName>Narendra Kaliya</fullName>
                </value>
                <value>
                    <fullName>Parul Sehgal</fullName>
                </value>
                <value>
                    <fullName>Prateek Chopra</fullName>
                </value>
                <value>
                    <fullName>Seema Girsha</fullName>
                </value>
                <value>
                    <fullName>Sumit Sabharwal</fullName>
                </value>
                <value>
                    <fullName>Tanuj Shrivastava</fullName>
                </value>
                <value>
                    <fullName>Taruna Wadhwa</fullName>
                </value>
                <value>
                    <fullName>Tiju Pappachan</fullName>
                </value>
                <value>
                    <fullName>Usha Senapati</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomersAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer's Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Cases</relationshipLabel>
        <relationshipName>R00N00000006yN6SEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_Date__c</fullName>
        <label>DL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DL_Response_Received__c</fullName>
        <label>DL Response Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_CC_Charged__c</fullName>
        <label>Date CC Charged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_DL_Response_Received__c</fullName>
        <label>Date - DL Response Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mike_Ross_Response_Received__c</fullName>
        <label>Date - Mike Ross Response Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mike_Ross_Sent__c</fullName>
        <label>Date - Mike Ross Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_New_AR_Sale_Counted__c</fullName>
        <label>Date New AR Sale Counted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Event__c</fullName>
        <label>Date Of Last Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Next_Event__c</fullName>
        <label>Date Of Next Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_Future_CC__c</fullName>
        <label>Date Received - Future CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received - Charge Back</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Response_Sent__c</fullName>
        <label>Date Response Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_JSD_Coface__c</fullName>
        <label>Date - Sent to JSD/Coface</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Update_from_JSD_Coface__c</fullName>
        <label>Date - Update from JSD/Coface</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demand_Letter_Sent__c</fullName>
        <label>Demand Letter Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <label>Due Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBS_Account_Number__c</fullName>
        <formula>CustomersAccount__r.EBS_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort_Time__c</fullName>
        <formula>Date_New_AR_Sale_Counted__c  -  Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effort Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>